chore : small code formating